--- a/resource/css/admin-style.css
+++ b/resource/css/admin-style.css
@@ -85,6 +85,7 @@ body {
     width: var(--page-header-width);
     color: var(--page-header-txtColor);
     background: var(--page-header-bgColor);
+    margin: 0 0 !important;
 }
 
 .page-header nav {
@@ -96,6 +97,9 @@ body {
 .page-header .logo {
     display: block;
     margin: 0 15px;
+    color: #fff !important;
+    text-decoration: none !important;
+    font-size: 16px !important;
 }
 
 .page-header .logo svg {
@@ -134,6 +138,9 @@ body {
 .page-header .admin-menu li>* {
     width: 100%;
     padding: 12px 15px;
+    font-size: 14px !important;
+    color: #fff !important;
+    text-decoration: none !important;
 }
 
 .page-header .admin-menu .switcher {
